--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,8 +68,8 @@ stages:
           $currentMinor = [Convert]::ToInt32($versionParts[1])
           $currentPatch = [Convert]::ToInt32($versionParts[2])
           $version = $currentMajor.ToString() + '.' + $currentMinor.ToString() + '.' + $currentPatch.ToString()
-          $dockerImage = "$env:containerRegistry/$env:imageRepository:$version"
-          $dockerImageRC = "$env:containerRegistry/$env:imageRepository:$version-rc"
+          $dockerImage = $env:CONTAINERREGISTRY + "/" + $env:IMAGEREPOSITORY + ":" + $version
+          $dockerImageRC = $dockerImage + "-rc"
           docker pull $dockerImageRC
           docker tag $dockerImageRC $dockerImage
           docker push dockerImage
