Testing some changes.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
           $currentPatch = [Convert]::ToInt32($versionParts[2])
           $version = $currentMajor.ToString() + '.' + $currentMinor.ToString() + '.' + $currentPatch.ToString()
           $dockerImage = $env:CONTAINERREGISTRY + "/" + $env:IMAGEREPOSITORY + ":" + $version
-          $dockerImageRC = $dockerImage + "-rc"
+          $dockerImageRC = $dockerImage
           docker pull $dockerImageRC
           docker tag $dockerImageRC $dockerImage
           docker push dockerImage
