Testing some more changes.

--- a/azure-pipelines/bumpReleaseVersion.yml
+++ b/azure-pipelines/bumpReleaseVersion.yml
@@ -8,6 +8,8 @@ steps:
       git config --global user.email "system-azure-devops@redapt.com"
       git config --global user.name "System"
       $version = [IO.File]::ReadAllText("VERSION")
+      git tag $version
+      git push origin --tags
       $versionParts = $version.TrimEnd("*-").Split(".")
       $currentMajor = [Convert]::ToInt32($versionParts[0])
       $currentMinor = [Convert]::ToInt32($versionParts[1])
