--- a/spa-react-netcore-redis/voting/voting/k8s/atlanta-values.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/atlanta-values.yaml
@@ -6,7 +6,7 @@
 servicesettings: |-
   {
     "ServiceSettings": {
-      "Beers": ["Sweetwater", "Budweiser", "Beer 3"]
+      "Beers": ["Sweetwater", "Budweiser", "Beer 3", "Reformation"]
     }
   }
 
