Friendlier messages for task names.

--- a/azure-pipelines/bumpReleaseVersion.yml
+++ b/azure-pipelines/bumpReleaseVersion.yml
@@ -1,5 +1,6 @@
 steps:
 - task: PowerShell@2
+  displayName: Bump the Release Version
   inputs:
     targetType: 'inline'
     workingDirectory: $(Build.SourcesDirectory)
