--- a/azure-pipelines/getVersion.yml
+++ b/azure-pipelines/getVersion.yml
@@ -1,5 +1,6 @@
 steps:
 - task: PowerShell@2
+  displayName: Get Current Version
   inputs:
     targetType: 'inline'
     workingDirectory: $(Build.SourcesDirectory)
