--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,7 +76,7 @@ stages:
     steps:
     - template: azure-pipelines/getVersion.yml
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Build for Dev
       inputs:
         command: buildAndPush
         repository: $(imageRepository)
@@ -130,7 +130,7 @@ stages:
     steps:
     - template: azure-pipelines/getVersion.yml
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Build for Test
       inputs:
         command: buildAndPush
         repository: $(imageRepository)
