Fix branches for pre-hotfix strategy.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ pr:
   branches:
     include:
     - release
-    - master
+# Master branch is needed for PRs directly from Hotfix, still WIP.
+#    - master
 
 resources:
 - repo: self
