--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -3,6 +3,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+  - redis-statefulset.yaml
 configmapGenerator:
 - name: favorite-beer
   files: 
