--- a/kustomize/redis-service.yaml
+++ b/kustomize/redis-service.yaml
@@ -1,21 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "favorite-beer.fullname" . }}-redis
-  labels:
-    app: {{ template "favorite-beer.name" . }}-redis
-    chart: {{ template "favorite-beer.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  name: favorite-beer-redis
 spec:
-  type: {{ .Values.redis.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.redis.service.port }}
-      targetPort: {{ .Values.redis.service.port }}
+    - port: 80
+      targetPort: 80
       protocol: TCP
       name: redis
-  selector:
-    app: {{ template "favorite-beer.name" . }}-redis
-    release: {{ .Release.Name }}
-
-
