--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -1,9 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
-  - redis-statefulset.yaml
 configmapGenerator:
 - name: favorite-beer
   files: 
