--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+  - redis
 configmapGenerator:
 - name: favorite-beer
   files: 
