--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 80
-      targetPort: http
-      protocol: TCP
-      name: http
+  - name: http
+    protocol: TCP
+    port: 80
+    targetPort: http
