--- a/kustomize/base/app/kustomization.yaml
+++ b/kustomize/base/app/kustomization.yaml
@@ -1,11 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+commonLabels:
+    app.kubernetes.io/name: favorite-beer
+    app.kubernetes.io/version: "latest"
+    app.kubernetes.io/component: application
+    app.kubernetes.io/managed-by: kustomize
+
 resources:
 - deployment.yaml
 - service.yaml
 - ingress.yaml
-commonLabels:
-  app: favorite-beer
 configmapGenerator:
 - name: favorite-beer
   files:
