--- a/kustomize/atlanta/kustomization.yaml
+++ b/kustomize/atlanta/kustomization.yaml
@@ -15,3 +15,10 @@ configmapGenerator:
   - REDIS_PORT=1234
   - REDIS_HOST=localhost
 
+patchesJSON6902:
+  - target: 
+      group: apps
+      version: v1
+      kind: Deployment
+      name: favorite-beer
+    path: resources.yaml
