--- a/kustomize/denver/kustomization.yaml
+++ b/kustomize/denver/kustomization.yaml
@@ -2,3 +2,33 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base/app
+
+configmapGenerator:
+- name: favorite-beer
+  behavior: replace
+  files:
+  - ./config.json
+  literals:
+  - REDIS_PORT=1234
+  - REDIS_HOST=localhost
+patchesJSON6902:
+  - target:
+      name: favorite-beer
+      kind: Deployment
+      group: apps
+      version: v1
+    path: resources.yaml
+  - target:
+      name: favorite-beer
+      kind: Deployment
+      group: apps
+      version: v1
+    path: probes.yaml
+  - target:
+      name: favorite-beer
+      kind: Service
+      version: v1
+    path: service.yaml 
+images:
+  - name: redaptcloud/favorite-beer
+    newTag: v1
