--- a/kustomize/base/redis/kustomization.yaml
+++ b/kustomize/base/redis/kustomization.yaml
@@ -7,6 +7,9 @@ commonLabels:
   app.kubernetes.io/component: cache
   app.kubernetes.io/name: redis
   app.kubernetes.io/instance: redis-favorite-beer
-  app.kubernetes.io/managed-by: kustomize
   app.kubernetes.io/name: redis
   app.kubernetes.io/part-of: favorite-beer
+configMapGenerator:
+- name: redis
+  files:
+  - redis.conf
