--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,19 @@
 
 name: $(Build.BuildId)_$(Date:yyyyMMdd).$(Rev:r)
 
-trigger:
-  branches:
-    include:
-    - master
-    - release
-  paths:
-    exclude:
-    - VERSION
-pr:
-  autoCancel: true
-  branches:
-    include:
-    - release
+# trigger:
+#   branches:
+#     include:
+#     - master
+#     - release
+#   paths:
+#     exclude:
+#     - VERSION
+# pr:
+#   autoCancel: true
+#   branches:
+#     include:
+#     - release
 
 resources:
 - repo: self
