--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,7 +43,7 @@ spec:
                     sh "tar xvf yq_linux_amd64.tar.gz"
                     sh "mv yq_linux_amd64 /usr/bin/yq"
 
-                    sh "git rev-parse --short=10 HEAD > SHA_TAG"
+                    sh "git rev-parse HEAD > SHA_TAG"
                     sh "chmod +x ./jenkins/scripts/bump_release_version.sh"
                     sh "./jenkins/scripts/bump_release_version.sh"
                     
