--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/values-aws-test.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/values-aws-test.yaml
@@ -1,6 +1,6 @@
 image:
   repository: 771502366784.dkr.ecr.us-east-2.amazonaws.com/favorite-beer
-  tag: latest
+  tag: 1.0.14-rc1
 
 service:
   type: LoadBalancer
