--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -30,6 +30,11 @@ spec:
     }
     stages {
         stage('Make Image') {
+            when {
+                expression {
+                    (env.CHANGE_ID != "" && (env.BRANCH_NAME.contains("feature/") || env.BRANCH_NAME.contains("hotfix/"))) || (env.CHANGE_ID == "" && env.BRANCH_NAME.contains("release"))
+                }
+            }
             environment {
                 DOCKERFILE      = "Dockerfile"
                 CONTEXT         = "./spa-react-netcore-redis/voting"
@@ -39,14 +44,14 @@ spec:
             }
             steps {
                 container('tools'){
-                    sh "wget https://github.com/mikefarah/yq/releases/download/v4.9.6/yq_linux_amd64.tar.gz"
-                    sh "tar xvf yq_linux_amd64.tar.gz"
-                    sh "mv yq_linux_amd64 /usr/bin/yq"
-
+                //    sh "wget https://github.com/mikefarah/yq/releases/download/v4.9.6/yq_linux_amd64.tar.gz"
+                //    sh "tar xvf yq_linux_amd64.tar.gz"
+                //    sh "mv yq_linux_amd64 /usr/bin/yq"
+                //
                     sh "git rev-parse HEAD > SHA_TAG"
-                    sh "chmod +x ./jenkins/scripts/bump_release_version.sh"
-                    sh "./jenkins/scripts/bump_release_version.sh"
-                    
+                //    sh "chmod +x ./jenkins/scripts/bump_release_version.sh"
+                //    sh "./jenkins/scripts/bump_release_version.sh"
+                //    
                 }
                 container(name: 'kaniko', shell: '/busybox/sh') {   
                     sh '''#!/busybox/sh
